src/objects/Brackets_Tournament__c.object
<CustomObject>
    <fields>
        <fullName>Allow_Update__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Allow Update</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CronTrigger__c</fullName>
        <description>Save CronTrigger Referenced ID</description>
        <label>CronTrigger</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Deadline__c</fullName>
        <inlineHelpText>Deadline for the &quot;Full tournament&quot; type pools.</inlineHelpText>
        <label>Deadline</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <inlineHelpText>General description of the tournament.</inlineHelpText>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>End__c</fullName>
        <inlineHelpText>Tournament end date, calculated with the date of the last match played</inlineHelpText>
        <label>End Date</label>
        <summarizedField>Brackets_Round__c.End__c</summarizedField>
        <summaryForeignKey>Brackets_Round__c.Brackets_Tournament__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ExternalId__c</fullName>
        <externalId>true</externalId>
        <label>ExternalId</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MaxRoundNumber__c</fullName>
        <label>MaxRoundNumber</label>
        <summarizedField>Brackets_Round__c.RoundNumber__c</summarizedField>
        <summaryForeignKey>Brackets_Round__c.Brackets_Tournament__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Start__c</fullName>
        <inlineHelpText>Tournament start date, calculated with the date of the first match played</inlineHelpText>
        <label>Start Date</label>
        <summarizedField>Brackets_Round__c.Start__c</summarizedField>
        <summaryForeignKey>Brackets_Round__c.Brackets_Tournament__c</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>TeamCount__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Number of teams that participate in the tournament</inlineHelpText>
        <label>Team Count</label>
        <precision>10</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <inlineHelpText>Which type of tournament this is?

Types supported include: &quot;NFL Playoff&quot; with fixed 12 teams and &quot;Standard&quot; a single elimination type of tournament.</inlineHelpText>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>NFL Playoff</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Standard</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Update_Source__c</fullName>
        <label>Update Source</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Version__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Version</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>isChild__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enabled if a tournament is imported from a URL</description>
        <label>isChild</label>
        <type>Checkbox</type>
    </fields>
    <label>Tournament</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Allow_Update__c</columns>
        <columns>isChild__c</columns>
        <columns>Type__c</columns>
        <columns>Update_Source__c</columns>
        <columns>Version__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tournaments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>DeadlineBeforeStart</fullName>
        <active>true</active>
        <description>Tournament deadline must be set before the first match</description>
        <errorConditionFormula>NOT(ISNULL(Deadline__c)) &amp;&amp; NOT(ISNULL( Start__c)) &amp;&amp; Deadline__c &gt; Start__c</errorConditionFormula>
        <errorMessage>The tournament deadline must be before the first game.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TeamCountGraterThanTwo</fullName>
        <active>true</active>
        <description>TeamCount must be greater than 2</description>
        <errorConditionFormula>ISPICKVAL( Type__c, &quot;Standard&quot; ) &amp;&amp; ( TeamCount__c &lt; 2 )</errorConditionFormula>
        <errorMessage>The tournament must have at least 2 teams</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TypeNotUpdateable</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(ISNEW())  &amp;&amp;  ISCHANGED(  Type__c )</errorConditionFormula>
        <errorDisplayField>Type__c</errorDisplayField>
        <errorMessage>This field can&apos;t be updated.</errorMessage>
    </validationRules>
</CustomObject>